--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "export": "next export",
+    "lint": "next lint",
+    "predeploy": "next build && next export -o build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "next": "13.0.6",
@@ -17,8 +20,13 @@
     "@types/node": "18.11.10",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
+    "gh-pages": "^4.0.0",
+    "postcss": "^8.4.19",
+    "tailwind-styled-components": "^2.2.0",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.9.3"
   }
 }
